Prevent mobile zoom

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script type="application/javascript" src="./js/qrcode.min.js"></script>
         <script type="module" src="./js/main.js"></script>
         <title>Store Pass</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     </head>
     <body>
         <div class="main">
