--- a/index.html
+++ b/index.html
@@ -29,14 +29,20 @@
 					<textarea id="encrypted"></textarea>
 				</div>
 			</div>
-			<div id="qrContainer" class="hidden">
-				<div id="qr"></div>
-			</div>
 			<div class="buttons">
-				<button id="toggleQR">QR Code</button>
 				<button id="encrypt">Encrypt</button>
 				<button id="decrypt">Decrypt</button>
 			</div>
+			<div id="linkContainer" class="hidden">
+				<a href="/#"></a>
+			</div>
+			<div id="qrContainer" class="hidden">
+				<div id="qr"></div>
+			</div>
+		</div>
+		<div class="print hidden">
+			<div class="encrypted"></div>
+			<div class="qr"></div>
 		</div>
 	</body>
 </html>
