--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 	<head>
 		<link rel="stylesheet" href="./css/main.css" />
 		<script type="application/javascript" src="./js/qrcode.min.js"></script>
+		<script
+			type="application/javascript"
+			src="./js/jquery-3.7.1.min.js"
+		></script>
 		<script type="module" src="./js/main.js"></script>
 		<title>Store Pass</title>
 		<meta
@@ -11,38 +15,42 @@
 	</head>
 	<body>
 		<div class="main">
-			<div class="field">
+			<div class="field pass">
 				<label for="mainPass">Main password:</label>
 				<div class="content">
-					<input type="text" id="mainPass" />
+					<input type="password" id="mainPass" />
+					<button>
+						<img src="./img/eye-open.svg" class="hidden" />
+						<img src="./img/eye-closed.svg" />
+					</button>
 				</div>
 			</div>
-			<div class="field">
+			<div class="field pass">
 				<label for="pass">Password:</label>
 				<div class="content">
-					<input type="text" id="pass" />
+					<input type="password" id="pass" />
+					<button>
+						<img src="./img/eye-open.svg" class="hidden" />
+						<img src="./img/eye-closed.svg" />
+					</button>
 				</div>
 			</div>
 			<div class="field">
 				<label for="Encrypted">Encrypted:</label>
 				<div class="content">
 					<textarea id="encrypted"></textarea>
+					<div id="qr" style="display: none"></div>
 				</div>
 			</div>
 			<div class="buttons">
+				<select id="option">
+					<option value="text">Text</option>
+					<option value="link">Link</option>
+					<option value="qr">QR Code</option>
+				</select>
 				<button id="encrypt">Encrypt</button>
 				<button id="decrypt">Decrypt</button>
 			</div>
-			<div id="linkContainer" class="hidden">
-				<a href="/#"></a>
-			</div>
-			<div id="qrContainer" class="hidden">
-				<div id="qr"></div>
-			</div>
-		</div>
-		<div class="print hidden">
-			<div class="encrypted"></div>
-			<div class="qr"></div>
 		</div>
 	</body>
 </html>
