feat: automatic decrypt from link

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 			<div class="field pass">
 				<label for="pass">Password:</label>
 				<div class="content">
-					<input type="password" id="pass" />
+					<input type="text" id="pass" />
 					<button>
-						<img src="./img/eye-open.svg" class="hidden" />
-						<img src="./img/eye-closed.svg" />
+						<img src="./img/eye-open.svg" />
+						<img src="./img/eye-closed.svg" class="hidden" />
 					</button>
 				</div>
 			</div>
